deploy/ha/homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      containers:
      - image: ghcr.io/home-assistant/home-assistant:latest
        imagePullPolicy: Always
        name: homeassistant
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 0
          privileged: true
        ports:
        - containerPort: 8123
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: homeassistant
        - mountPath: /config/configuration.yaml
          subPath: configuration.yaml
          name: ha-config
      volumes:
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant
        - name: ha-config
          configMap:
            name: ha-configuration
            defaultMode: 0644
